# agent-explorer

./: .gitignore  AGENT_AGNOSTIC_PLAN.md  AI_SKILL_USAGE_GUIDE.md  CONTRIBUTING.md  CRITIQUE_REPORT.md  FINAL_REVIEW.md  GITHUB_READINESS_REPORT.md  GITHUB_REVIEW.md  GITHUB_STATUS_REVIEW.md  GIT_HISTORY_CLEANUP.md  IMPLEMENTATION_REVIEW.md  Justfile  LICENSE  MCP_CRITIQUE_REPORT.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  README_DEPENDENCIES.md  REFINEMENT_SUMMARY.md  SECURITY_REVIEW.md  SKILL_MCP_USAGE_RULES.md  TOOL_USAGE_MOTIVATION.md  VALIDATION_REPORT.md  pyproject.toml
docs/: CHAT_EXPLORER.md
docs/archive/2025-11/: CURSOR_OPTIMIZATION.md  CURSOR_VALIDATION.md  VALIDATION_COMPLETE.md  VALIDATION_COMPLETE_FINAL.md  VALIDATION_RESULTS.md  cursor_mcp_checklist.md  skill_usage_philosophy.md  verify_cursor_mcp.md
docs/archive/internal/: CHONKIE_ASSESSMENT.md  DOTFILES_SYNC_PLAN.md  IMPROVEMENTS.md  MOTIVATION_ANALYSIS.md  NAMING_RECOMMENDATIONS.md  README.md  REPO_CLEANUP_PLAN.md  REPO_RENAME_PLAN.md  SKILL_MCP_MOTIVATION.md  URGENT_DOTFILES_FIX.md  USECASE_ANALYSIS.md  WEAK_POINTS_ANALYSIS.md
scripts/: agent_qa_sweep.sh  agent_query_fuzzer.sh  build_index_and_vecdb.sh  lib.sh
src/: llm_utils.py
src/agent_explorer/: __init__.py  annotate.py  cli.py  cluster.py  db.py  docs.py  embeddings.py  env.py  index.py  memory.py  paths.py  tag_cluster.py  toolchat.py
src/agent_explorer/backends/: __init__.py  base.py  cursor.py
src/cursor_explorer/: cli.py  fuzz.py  index.py  memory.py  multiscale.py  prompts.py  pyd_models.py  qa.py  streams.py  toolchat.py
tests/: test_backends.py  test_cli.py  test_cli_backend_integration.py  test_cli_more.py  test_cluster_cli.py  test_cluster_flow_optional_llm.py  test_db_and_paths.py  test_docs_index.py  test_env.py  test_formatting_and_trace.py  test_fuzz.py  test_hybrid_and_vec_errors.py  test_index_and_toolchat_tools.py  test_pairs.py  test_parser_and_rag.py  test_parser_edge_cases.py  test_pipeline.py  test_qa.py  test_qa_cli.py  test_small_utils.py  test_toolchat.py  test_topics_and_agent.py  test_trace.py  test_vector_and_embeddings.py
